--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>WISH LIST PAGE 13</title>
     </head>
     <h1>PS5</h1>
-    <img src="https://static.bhphotovideo.com/explora/sites/default/files/ps4_slim.jpg">
+    <img src="https://cdn.mos.cms.futurecdn.net/QjWZevdvUemHUVYNmwmZRA.jpg">
     
     <p>The PlayStation 5 (PS5) is an upcoming home video game console developed by Sony Interactive Entertainment. Announced in 2019 as the successor to the PlayStation 4, it is scheduled to launch on November 12, 2020 in North America, Australia, New Zealand, Japan, Singapore, and South Korea, and on November 19, 2020 for the rest of the world. The platform is anticipated to launch in two varieties, as a base PlayStation 5 system incorporating an Ultra HD Blu-ray compatible optical disc drive for retail game support alongside digital distribution via the PlayStation Store, and a lower-cost digital variant lacking the disc drive while retaining digital download support.<br><br>The PlayStation 5 features a customized solid-state drive designed for high-speed data streaming to enable significant improvements in graphical performance. The hardware also features a custom AMD GPU capable of ray tracing, support for 4K resolution displays and up to 120 frames per second, new audio hardware for real-time 3D audio effects, and backward compatibility with most PlayStation 4 and PlayStation VR games.
 
